Fixes alignment of print link in news page.
Print link in news page was not properly aligned with email link
and this commit fixes that.

mario h.
node/60095

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -259,7 +259,7 @@
   margin-right: 95px;
 }
 .node-type-news .general-left .pane-slac-ip-panes-print {
-  top: -95px;
+  top: -100px;
   margin-right: 0;
 }
 .node-type-news .general-left .field-name-field-shared-image {
