--- a/sites/all/themes/slac/sass/components/_event-news-notice.scss
+++ b/sites/all/themes/slac/sass/components/_event-news-notice.scss
@@ -156,7 +156,7 @@ $zen-column-count: 12;
       margin-right: 95px;
     }
     .pane-slac-ip-panes-print {
-      top: -95px;
+      top: -100px;
       margin-right: 0;
     }
     .field-name-field-shared-image {
